fix: 💄 wrong colors used

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ footer img {
   padding-left: 12.5px;
 }
 .instruction-card__number {
-  background-color: #FF79DA;
+  background-color: #9356DC;
   width: 25px;
   height: 25px;
   border-radius: 25px;
@@ -126,7 +126,7 @@ footer img {
   box-shadow: 0 5px 5px #ccc;
 }
 .instruction-card__content:hover {
-  background-color: #ffdff6;
+  background-color: #ece1f9;
 }
 .instruction-card__content__icon {
   margin: 0 15px 0 20px;
@@ -303,7 +303,7 @@ footer img {
   width: 100%;
 }
 .description__location {
-  background-color: #eee;
+  background-color: #e5e5e5;
   width: 100%;
   height: 50px;
   z-index: -1;
