--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -52,7 +52,7 @@
     width: 100%;
 
     &__location {
-        background-color: #eee;
+        background-color: #e5e5e5;
         width: 100%;
         height: 50px;
         z-index: -1;
